# bilive-sentinel

./: .gitignore  Cargo.toml  README.md  compose.override.yml  compose.yml  plan.md
config/: default.toml
docs/: architecture.md  operations.md
scripts/: dev-down  dev-up
src/: backoff.rs  clickhouse.rs  lib.rs  metrics.rs  redpanda.rs
src/api/: main.rs
src/collector/: main.rs
src/live_api/: cache.rs  client.rs  mod.rs  wbi.rs
src/protocol/: event.rs  json_extract.rs  mod.rs  packet.rs
src/registry/: mod.rs
src/writer/: batch.rs  main.rs
tests/: multi_room_stability.rs
