[package]
name = "bilive-sentinel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "collector"
path = "src/collector/main.rs"

[[bin]]
name = "writer"
path = "src/writer/main.rs"

[[bin]]
name = "api"
path = "src/api/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
brotli = "7"
clap = { version = "4", features = ["derive"] }
clickhouse = "0.13"
futures-util = "0.3"
flate2 = "1"
hex = "0.4"
md-5 = "0.10"
prometheus = "0.13"
rdkafka = "0.36"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
